--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme='BASE'>
-
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,4 +19,3 @@
     <div id="modal-root"></div>
   </body>
 </html>
-
